[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/enemy.png" type="Texture" id=1]
[ext_resource path="res://Environment/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Audio/laugh.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.6632, 28.2354 )

[sub_resource type="Animation" id=1]
resource_name = "Run"
length = 0.25
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 22.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 81
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.68173, 15.368 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Run = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 27, -7 )
shape = SubResource( 3 )

[node name="Edge" type="RayCast2D" parent="."]
position = Vector2( 40, 0 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="Front" type="RayCast2D" parent="."]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 17

[node name="FrontPlayer" type="RayCast2D" parent="."]
position = Vector2( 0, 10 )
enabled = true
cast_to = Vector2( 400, 0 )
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
